theme作成環境を整えた

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     volumes:
       - ./config/php.conf.ini:/usr/local/etc/php/conf.d/conf.ini
       - ./wp-app:/var/www/html # Full wordpress project
-      - ./original-theme/trunk/:/var/www/html/wp-content/themes/original-theme
+      - ./original-theme/public/:/var/www/html/wp-content/themes/original-theme
     environment:
       WORDPRESS_DB_HOST: db
       WORDPRESS_DB_NAME: "${DB_NAME}"
